--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   text-align: center;
-  background: #f3ca20;
+  background: linear-gradient(to right, #e96443, #904e95);
   color: #1d4350;
   padding: 30px;
   border-radius: 10px;
@@ -27,17 +27,17 @@ code {
 }
 
 .title {
-  color: black;
+  color: white;
   margin-bottom: 35px;
   font-size: 2.5em;
 }
 
 body {
-  background: #ffffff;
+  background: black;
 }
 
 #city {
-  background: #f3ca20;
+  background: linear-gradient(to right, #e96443, #904e95);;
   color: white;
   /* border: 1px solid black; */
   border-radius: 5px;
@@ -47,10 +47,10 @@ body {
 }
 
 .cityName{
-  color: black;
+  color: white;
 }
 
 .span1{
-  color: black;
+  color: white;
 }
 
